<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.github.woundedkoba</groupId>
  <artifactId>ClickSortForked</artifactId>
  <version>0.0.2</version>

  <repositories>
      <repository>
          <id>papermc</id>
    	  <url>https://repo.papermc.io/repository/maven-public/</url>
	  </repository>
  </repositories>
  
  <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jdbi</groupId>
                <artifactId>jdbi3-bom</artifactId>
                <type>pom</type>
                <version>3.49.5</version>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
  
  <dependencies>
      <dependency>
        <groupId>io.papermc.paper</groupId>
        <artifactId>paper-api</artifactId>
        <version>1.21.5-R0.1-SNAPSHOT</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
            <groupId>org.jdbi</groupId>
            <artifactId>jdbi3-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jdbi</groupId>
            <artifactId>jdbi3-sqlite</artifactId>
        </dependency>
        <dependency>
          <groupId>org.antlr</groupId>
          <artifactId>antlr4-runtime</artifactId>
          <version>4.13.2</version>
        </dependency>
  </dependencies>

  <build>
      <finalName>${project.name}-${project.version}</finalName>
	  <plugins>
	      <plugin>
	          <groupId>org.apache.maven.plugins</groupId>
	          <artifactId>maven-compiler-plugin</artifactId>
	          <version>3.14.0</version>
	          <configuration>
	              <source>21</source>
	              <target>21</target>
	          </configuration>
	      </plugin>
	      <plugin>
	        <artifactId>maven-shade-plugin</artifactId>
	        <version>3.6.0</version>
	        <configuration>
	          <createDependencyReducedPom>false</createDependencyReducedPom>
	          <shadedArtifactAttached>true</shadedArtifactAttached>
	          <minimizeJar>true</minimizeJar>
	          <relocations>
                <relocation>
                  <pattern>org.jdbi.v3</pattern>
                  <shadedPattern>org.jdbi.v3</shadedPattern>
                </relocation>
              </relocations>
	          <transformers>
	            <transformer
	                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
	                <mainClass>io.github.woundedkoba.clicksort.ClickSortPlugin</mainClass>
	            </transformer>
	          </transformers>
	        </configuration>
	        <executions>
	          <execution>
	            <phase>package</phase>
	            <goals>
	              <goal>shade</goal>
	            </goals>
	          </execution>
	        </executions>
	      </plugin>
	      <plugin>
            <artifactId>maven-resources-plugin</artifactId>
            <version>3.3.1</version>
            <configuration>
              <nonFilteredFileExtensions>
                <nonFilteredFileExtension>sqlite</nonFilteredFileExtension>
              </nonFilteredFileExtensions>
            </configuration>
          </plugin>
	  </plugins>
      <resources>
        <resource>
          <directory>${basedir}/src/main/resources</directory>
          <filtering>true</filtering>
          <includes>
              <include>**/*.yml</include>
            <include>sorting_prefs.sqlite</include>
          </includes>
        </resource>
      </resources>
  </build>
</project>
